added import historical data in settings
